--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+*{
+    margin: 0;
+    padding: 0;
+}
 #main{
     display: flex;
     flex-wrap: wrap;
@@ -7,14 +12,24 @@
 }
 
 #club-logo{
-    width: 8rem;
+    width: 9rem;
     align-items: center;
+    padding: 0.75rem;
+}
+
+.anthem{
+    font-family: 'Poppins', sans-serif;
+    color: #ffffff;
+    font-size: x-large;
+    font-weight: 200;
 }
 
 #header{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     margin-bottom: 1.5rem;
+    /* background-color: #182E7A; */
 }
 
 #search{
@@ -26,8 +41,10 @@
 
 #search-btn{
     height: 2rem;
-    width: 5rem;
-    border: 1px #182E7A solid;
+    width: fit-content;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    border: 0px #182E7A solid;
     border-radius: 5px;
     color: #182E7A;
     font-family: 'Poppins', sans-serif;
@@ -42,7 +59,7 @@
     cursor: pointer;
     background-color: white;
     color: #182E7A;
-    border: #182E7A 2px solid;
+    border: #162869 1px solid;
 }
 
 #input-box{
@@ -53,6 +70,8 @@
     margin: 1.5rem;
     font-family: 'Poppins', sans-serif;
     font-size: medium;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .center{
@@ -65,8 +84,6 @@
     width: 15rem;
 }
 
-
-
 .player-name{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -75,12 +92,13 @@
 
 .player-div{
     margin: 1.5rem;
-    /* transition: transform .2s; */
+    transition: transform .2s;
 }
 
-/* .player-div:hover{
-    transform: scale(1.2);
-} */
+.player-div:hover{
+    transform: scale(1);
+    cursor: pointer;
+}
 
 
 #chart-div{
@@ -94,3 +112,4 @@
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
+
