--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 1.5rem;
-    /* background-color: #182E7A; */
+    background-color: #182E7A;
 }
 
 #search{
@@ -44,7 +44,7 @@
     width: fit-content;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
-    border: 0px #182E7A solid;
+    border: 1px #182E7A solid;
     border-radius: 5px;
     color: #182E7A;
     font-family: 'Poppins', sans-serif;
@@ -93,10 +93,15 @@
 .player-div{
     margin: 1.5rem;
     transition: transform .2s;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
 
 .player-div:hover{
-    transform: scale(1);
+    transform: scale(1.2);
     cursor: pointer;
 }
 
@@ -108,8 +113,62 @@
 
 #myChart{
     width: 100%;
-    height:100%;
+    max-width: 100%;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    
 }
+
+
+#playerChart{
+    height: 10rem;
+    max-height: 30rem;
+}
+
+.player-flag{
+    width: 2rem;
+    margin-left: auto;
+  margin-right: auto;
+
+}
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+    overflow: hidden;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: rgb(255, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+  }
 
