--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 1.5rem;
-    background-color: #182E7A;
+    /* background-color: #182E7A; */
 }
 
 #search{
@@ -121,7 +121,7 @@
 
 
 #playerChart{
-    height: 10rem;
+    
     max-height: 30rem;
 }
 
@@ -154,7 +154,7 @@
     margin: 5% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 40%; /* Could be more or less, depending on screen size */
+    width: 50%; /* Could be more or less, depending on screen size */
   }
   
   /* The Close Button */
@@ -172,3 +172,17 @@
     cursor: pointer;
   }
 
+.modal-name{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    text-align: left;
+    margin-bottom: 2.5rem;
+}
+
+.modal-position{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: medium;
+    text-align: left;
+   
+}
