--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@
 
 #playerChart{
     
-    max-height: 30rem;
+    max-height: 20rem;
 }
 
 .player-flag{
@@ -141,7 +141,7 @@
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    height: 100vh; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
