--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,9 @@
 }
 
 .player-div{
+    /* margin-bottom: 6rem;
+    margin-right: 1.5rem;
+    margin-left: 1.5rem; */
     margin: 1.5rem;
     transition: transform .2s;
     display: flex;
@@ -145,7 +148,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
-    overflow: hidden;
+    
   }
   
   /* Modal Content/Box */
@@ -155,6 +158,7 @@
     padding: 20px;
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
+    border-radius: 10px;
   }
   
   /* The Close Button */
