--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 1.5rem;
-    /* background-color: #182E7A; */
+    margin-top: 1.5rem;
+    background-color: #182E7A;
 }
 
 #search{
@@ -91,10 +92,9 @@
 }
 
 .player-div{
-    /* margin-bottom: 6rem;
+    margin-bottom: 6rem;
     margin-right: 1.5rem;
-    margin-left: 1.5rem; */
-    margin: 1.5rem;
+    margin-left: 1.5rem;
     transition: transform .2s;
     display: flex;
     flex-wrap: wrap;
