--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,8 @@
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-    /* background-color: #182E7A; */
+    /* margin-top: 1.5rem; */
+    background: linear-gradient( #162C6E 50%, rgba(0, 0, 0, 0) 50%);
 }
 
 #search{
@@ -109,18 +109,18 @@
 }
 
 
-#chart-div{
+/* #chart-div{
     width: 90%;
     margin: auto;
-}
+} */
 
-#myChart{
+/* #myChart{
     width: 100%;
     max-width: 100%;
     padding-top: 5rem;
     padding-bottom: 5rem;
     
-}
+} */
 
 
 .playerChart{
@@ -129,7 +129,7 @@
 }
 
 .player-flag{
-    width: 1.5rem;
+    width: 2rem;
     margin-left: auto;
   margin-right: auto;
 
